@@ -347,7 +347,17 @@ specifier|final
 name|Configuration
 name|conf
 decl_stmt|;
+specifier|private
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|HRegionInterface
+argument_list|>
+name|serverInterfaceClass
+decl_stmt|;
 comment|/*    * Data structure that holds current location for a region and its info.    */
+specifier|protected
 specifier|static
 class|class
 name|RegionLocation
@@ -402,6 +412,24 @@ operator|+
 name|this
 operator|.
 name|regionInfo
+return|;
+block|}
+specifier|public
+name|HRegionInfo
+name|getRegionInfo
+parameter_list|()
+block|{
+return|return
+name|regionInfo
+return|;
+block|}
+specifier|public
+name|HServerAddress
+name|getServerAddress
+parameter_list|()
+block|{
+return|return
+name|serverAddress
 return|;
 block|}
 block|}
@@ -559,7 +587,7 @@ name|Random
 argument_list|()
 expr_stmt|;
 block|}
-specifier|private
+specifier|protected
 name|void
 name|handleRemoteException
 parameter_list|(
@@ -716,7 +744,7 @@ throw|;
 block|}
 block|}
 comment|/* Find the address of the master and connect to it    */
-specifier|private
+specifier|protected
 name|void
 name|checkMaster
 parameter_list|()
@@ -2237,7 +2265,7 @@ argument_list|()
 expr_stmt|;
 block|}
 comment|/*    * Verifies that the specified table name is not a reserved name    * @param tableName - the table name to be checked    * @throws IllegalArgumentException - if the table name is reserved    */
-specifier|private
+specifier|protected
 name|void
 name|checkReservedTableName
 parameter_list|(
@@ -2349,18 +2377,69 @@ name|this
 operator|.
 name|tableServers
 operator|=
+name|getTableServers
+argument_list|(
+name|tableName
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Gets the servers of the given table.    *     * @param tableName - the table to be located    * @throws IOException - if the table can not be located after retrying    */
+specifier|protected
+specifier|synchronized
+name|SortedMap
+argument_list|<
+name|Text
+argument_list|,
+name|RegionLocation
+argument_list|>
+name|getTableServers
+parameter_list|(
+name|Text
+name|tableName
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|tableName
+operator|==
+literal|null
+operator|||
+name|tableName
+operator|.
+name|getLength
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"table name cannot be null or zero length"
+argument_list|)
+throw|;
+block|}
+name|SortedMap
+argument_list|<
+name|Text
+argument_list|,
+name|RegionLocation
+argument_list|>
+name|serverResult
+init|=
 name|tablesToServers
 operator|.
 name|get
 argument_list|(
 name|tableName
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
-name|this
-operator|.
-name|tableServers
+name|serverResult
 operator|==
 literal|null
 condition|)
@@ -2387,9 +2466,7 @@ expr_stmt|;
 block|}
 comment|// We don't know where the table is.
 comment|// Load the information from meta.
-name|this
-operator|.
-name|tableServers
+name|serverResult
 operator|=
 name|findServersForTable
 argument_list|(
@@ -2397,6 +2474,9 @@ name|tableName
 argument_list|)
 expr_stmt|;
 block|}
+return|return
+name|serverResult
+return|;
 block|}
 comment|/*    * Locates a table by searching the META region    *     * @param tableName - name of table to find servers for    * @return - map of first row to table info for all regions in the table    * @throws IOException    */
 specifier|private
@@ -3630,7 +3710,8 @@ return|return
 name|servers
 return|;
 block|}
-comment|/*     * Establishes a connection to the region server at the specified address    * @param regionServer - the server to connect to    * @throws IOException    */
+comment|/**     * Establishes a connection to the region server at the specified address.    * @param regionServer - the server to connect to    * @throws IOException    */
+specifier|protected
 specifier|synchronized
 name|HRegionInterface
 name|getHRegionConnection
@@ -3641,6 +3722,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|getRegionServerInterface
+argument_list|()
+expr_stmt|;
 comment|// See if we already have a connection
 name|HRegionInterface
 name|server
@@ -3665,6 +3749,76 @@ literal|null
 condition|)
 block|{
 comment|// Get a connection
+name|long
+name|versionId
+init|=
+literal|0
+decl_stmt|;
+try|try
+block|{
+name|versionId
+operator|=
+name|serverInterfaceClass
+operator|.
+name|getDeclaredField
+argument_list|(
+literal|"versionID"
+argument_list|)
+operator|.
+name|getLong
+argument_list|(
+name|server
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalAccessException
+name|e
+parameter_list|)
+block|{
+comment|// Should never happen unless visibility of versionID changes
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+literal|"Unable to open a connection to a "
+operator|+
+name|serverInterfaceClass
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" server."
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|NoSuchFieldException
+name|e
+parameter_list|)
+block|{
+comment|// Should never happen unless versionID field name changes in HRegionInterface
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+literal|"Unable to open a connection to a "
+operator|+
+name|serverInterfaceClass
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" server."
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
 name|server
 operator|=
 operator|(
@@ -3674,13 +3828,9 @@ name|RPC
 operator|.
 name|waitForProxy
 argument_list|(
-name|HRegionInterface
-operator|.
-name|class
+name|serverInterfaceClass
 argument_list|,
-name|HRegionInterface
-operator|.
-name|versionID
+name|versionId
 argument_list|,
 name|regionServer
 operator|.
@@ -3982,6 +4132,7 @@ argument_list|)
 return|;
 block|}
 comment|/*    * Find region location hosting passed row using cached info    * @param row Row to find.    * @return Location of row.    */
+specifier|protected
 specifier|synchronized
 name|RegionLocation
 name|getRegionLocation
@@ -6905,6 +7056,93 @@ expr_stmt|;
 block|}
 return|return
 name|errCode
+return|;
+block|}
+comment|/**    * Determine the region server interface to use from configuration properties.    *    */
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+specifier|private
+name|void
+name|getRegionServerInterface
+parameter_list|()
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|serverInterfaceClass
+operator|!=
+literal|null
+condition|)
+block|{
+return|return;
+block|}
+name|String
+name|serverClassName
+init|=
+name|this
+operator|.
+name|conf
+operator|.
+name|get
+argument_list|(
+name|REGION_SERVER_CLASS
+argument_list|,
+name|DEFAULT_REGION_SERVER_CLASS
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|this
+operator|.
+name|serverInterfaceClass
+operator|=
+operator|(
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|HRegionInterface
+argument_list|>
+operator|)
+name|Class
+operator|.
+name|forName
+argument_list|(
+name|serverClassName
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ClassNotFoundException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+literal|"Unable to find region server interface "
+operator|+
+name|serverClassName
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+comment|/**    * @return the configuration for this client    */
+specifier|protected
+name|Configuration
+name|getConf
+parameter_list|()
+block|{
+return|return
+name|conf
 return|;
 block|}
 comment|/**    * Main program    * @param args    */
